--- a/templates/products/new.html.twig
+++ b/templates/products/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Products{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Products</h1>
 
     {{ include('products/_form.html.twig') }}
 
     <a href="{{ path('app_products_index') }}">back to list</a>
+    </div>
 {% endblock %}
