--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}Products{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Products</h1>
+    <a href="{{ path('app_products_index') }}" class="btn btn-sm btn-primary">back to list</a>
 
+    <a href="{{ path('app_products_edit', {'id': product.id}) }}" class="btn btn-sm btn-warning">edit</a>
     <table class="table">
         <tbody>
             <tr>
@@ -17,7 +20,7 @@
             </tr>
             <tr>
                 <th>Poster</th>
-                <td>{{ product.poster }}</td>
+                <td><img src="{{ product.poster }}" width="200px" height="150px"</td>
             </tr>
             <tr>
                 <th>Description</th>
@@ -41,10 +44,6 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('app_products_index') }}">back to list</a>
-
-    <a href="{{ path('app_products_edit', {'id': product.id}) }}">edit</a>
-
     {{ include('products/_delete_form.html.twig') }}
+</div>
 {% endblock %}
