--- a/templates/sub_category/new.html.twig
+++ b/templates/sub_category/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New SubCategory{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new SubCategory</h1>
 
     {{ include('sub_category/_form.html.twig') }}
 
     <a href="{{ path('app_sub_category_index') }}">back to list</a>
+</div>
 {% endblock %}
