--- a/templates/sub_category/show.html.twig
+++ b/templates/sub_category/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}SubCategory{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>SubCategory</h1>
+    <a href="{{ path('app_sub_category_index') }}" class="btn btn-sm btn-primary">back to list</a>
 
+    <a href="{{ path('app_sub_category_edit', {'id': sub_category.id}) }}" class="btn btn-sm btn-warning">edit</a>
     <table class="table">
         <tbody>
             <tr>
@@ -17,10 +20,6 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('app_sub_category_index') }}">back to list</a>
-
-    <a href="{{ path('app_sub_category_edit', {'id': sub_category.id}) }}">edit</a>
-
     {{ include('sub_category/_delete_form.html.twig') }}
+</div>
 {% endblock %}
