modifie nav barre in base template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{{ path('app_category_index') }}">Catégories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_sub_category_index') }}">Sous-catérgories</a>
+                        <a class="nav-link" href="{{ path('app_sub_category_index') }}">Sous-catégories</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_user_index') }}">Utilisateurs</a>
