--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -38,6 +38,7 @@
                 <td>
                     <a href="{{ path('app_products_show', {'id': product.id}) }}" class="btn btn-sm btn-primary">show</a>
                     <a href="{{ path('app_products_edit', {'id': product.id}) }}" class="btn btn-sm btn-warning">edit</a>
+                    {{ include('products/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
