--- a/templates/sub_category/index.html.twig
+++ b/templates/sub_category/index.html.twig
@@ -22,6 +22,7 @@
                 <td>
                     <a href="{{ path('app_sub_category_show', {'id': sub_category.id}) }}" class="btn btn-sm btn-primary">show</a>
                     <a href="{{ path('app_sub_category_edit', {'id': sub_category.id}) }}" class="btn btn-sm btn-warning">edit</a>
+                    {{ include('sub_category/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
