--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -28,6 +28,7 @@
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}" class="btn btn-sm btn-primary">show</a>
                     <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-sm btn-warning">edit</a>
+                    {{ include('user/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
